--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="estilos.Css">
+    <link rel="stylesheet" href="style.Css">
     <title>Document</title>
 </head>
 
