--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Diseño css</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.Css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
